--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,29 @@
-alembic           1.14.1
-bcrypt            4.2.1
-blinker           1.9.0
-click             8.1.8
-colorama          0.4.6
-Flask             3.1.0
-Flask-Bcrypt      1.0.1
-Flask-Login       0.6.3
-Flask-Migrate     4.1.0
-Flask-SQLAlchemy  3.1.1
-Flask-WTF         1.2.2
-greenlet          3.1.1
-itsdangerous      2.2.0
-Jinja2            3.1.5
-Mako              1.3.8
-MarkupSafe        3.0.2
-pip               24.3.1
-psycopg2          2.9.10
-SQLAlchemy        2.0.37
-typing_extensions 4.12.2
-Werkzeug          3.1.3
-WTForms           3.2.1
+alembic==1.14.1
+bcrypt==4.2.1
+blinker==1.8.2
+cffi==1.17.1
+click==8.1.8
+cryptography==44.0.0
+flask==3.0.3
+Flask-Bcrypt==1.0.1
+Flask-Login==0.6.3
+Flask-Migrate==4.1.0
+flask-sqlalchemy==3.1.1
+flask-wtf==1.2.1
+greenlet==3.1.1
+gunicorn==23.0.0
+importlib-metadata==8.5.0
+importlib-resources==6.4.5
+itsdangerous==2.2.0
+jinja2==3.1.5
+Mako==1.3.8
+MarkupSafe==2.1.5
+packaging==24.2
+pycparser==2.22
+PyMySQL==1.1.1
+python-dotenv==1.0.1
+SQLAlchemy==2.0.37
+typing-extensions==4.12.2
+werkzeug==3.0.6
+wtforms==3.1.2
+zipp==3.20.2
