--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ click==8.1.8
 cryptography==44.0.0
 flask==3.0.3
 Flask-Bcrypt==1.0.1
+Flask-HTTPAuth==4.8.0
 Flask-Login==0.6.3
 Flask-Migrate==4.1.0
 flask-sqlalchemy==3.1.1
